Fix phone not visible issue, and lineheight wrong on featurecards

--- a/src/components/feature-card/FeatureCard.module.scss
+++ b/src/components/feature-card/FeatureCard.module.scss
@@ -2,7 +2,9 @@
 
 .textBox {
   padding: 40px;
-  line-height: 28px;
+  p {
+    line-height: 28px;
+  }
 }
 
 .colWithImg {
