--- a/src/sections/howMuchToSpend/HowMuchToSpend.module.scss
+++ b/src/sections/howMuchToSpend/HowMuchToSpend.module.scss
@@ -33,9 +33,9 @@
         display: none;
       }
 
-        $offset: -240px;
+      $offset: -50vw;
       .phone {
-        padding: 32px;
+        padding: 5vw;
         overflow: hidden;
         height: 50%;
         position: relative;
